--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 
 /* GENERAL PAGE
-================== */
+   ================== */
 
 html {
-  background-color: rgb(43, 49, 55);
+  background-color: rgb(43, 49, 55); /* very dk gray */
 }
 
 body {
+  /* copied to match GitHub site */
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
   font-size: 14px !important;
   color: #586069 !important;
@@ -22,6 +23,7 @@ h1 {
   font-family: Roboto,-apple-system,BlinkMacSystemFont,"Helvetica Neue","Segoe UI","Oxygen","Ubuntu","Cantarell","Open Sans",sans-serif;
 }
 
+/* TODO:  merge with body, or is p even being used? */
 p {
   text-align: center;
   font-size: 12px;
@@ -29,39 +31,34 @@ p {
   margin-bottom: 0px;
 }
 
-
 /* FORM
    ================== */
 
 form fieldset {
   margin: 0px auto;
   margin-top: 30px;
-  width: 320px;
+  /* width: 320px; */
+  width: 326px;  /* PROBLEM: had to widen to accomodate the empty spans after text boxes that hold the error x's */
   background-color: white;
-  border-radius: 3px;
+  border-radius: 15px;
   border: none;
   padding: 10px 20px 20px 20px;
   box-shadow: 0px 0px 8px 15px #616161;
 }
 
-/* input=text labels */
+/* textboxes
+   --------- */
 .text-label {
-  display: block;
+  display: block; /* puts labels on their own line with spacing around them */
   margin-top: 10px;
   margin-bottom: 5px;
 }
-
-.radio-chk-label {
-  font-size: 16px;
+.text-label-error {
+  color: red;
 }
-.radio-chk-btn {
-  margin-top: 0px;
-  margin-bottom: 6px;
-  margin-left: 12px;
-  font-size: 16px;
-}
-
-.text-input {
+input[type=text],
+input[type=email],
+input[type=password] {
   padding: 10px;
   width: 300px;
   height: 20px;
@@ -73,18 +70,68 @@ form fieldset {
   border-width: 1px;
   font-size: 16px;
 }
-
 ::placeholder {
   color: #9E9E9E;
   font-weight: 200;
 }
+input:invalid {
+  border: 1px solid red;
+}
+/* PROBLEM:  WHY MUST THERE BY A BLANK SPAN AFTER THE CONTROL FOR THIS TO WORK? */
+input[type=text]:invalid + ::after,
+select[type=text]:invalid + ::after,
+input[type=email]:invalid + ::after,
+select[type=email]:invalid + ::after,
+input[type=password]:invalid + ::after,
+select[type=password]:invalid + ::after {
+    font-family: -apple-system,Helvetica,Arial,sans-serif;  /* otherwise inherited body font forces the "x" to be black.  No clue why. */
+    /* position: relative; */ /* required for negative left margin to work */
+    /* z-index: 900;*/
+    margin-left: -30px;
+    content: '✖';
+    color: red;
+    padding-left: 5px;
+}
+
+/* Alternative format that is more explicit about need for trailing span
+    input:valid + span:after,
+    select:valid + span:after{*/
+
+/*
+HIDING THE CHECKS, makes the screen too busy
+
+input[type=text]:valid + :after,
+select[type=text]:valid + :after,
+input[type=email]:valid + :after,
+select[type=email]:valid + :after,
+input[type=password]:valid + :after,
+select[type=password]:valid + :after {
+    position: relative;
+    z-index: 900;
+    margin-left: -30px;
+    content: '✓';
+    color: green;
+    padding-left: 5px;
+}*/
 
 
+/* radio/chkbox
+   ------------ */
+.radio-chk-label {
+  font-size: 16px;
+}
+input[type=radio],
+input[type=checkbox] {
+  margin-top: 0px;
+  margin-bottom: 6px;
+  margin-left: 12px;
+  font-size: 16px;
+}
 
-/* SUBMIT BUTTON
-================== */
-
+/* submit btn
+   ---------- */
 button {
+  /* copied to match GitHub site */
   color: #fff;
   background-color: #28a745;
   background-image: linear-gradient(-180deg, #34d058 0%, #28a745 90%);
@@ -97,7 +144,7 @@ button {
   border-radius: 6px;
   margin-top: 12px;
 }
-/* center the submit button */
+/* center submit btn in div */
 .submit-div {
   margin: 0px auto;
   text-align: center;
